--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:name=".TwitterApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:theme="@style/AppTheme">
         <meta-data
             android:name="AA_DB_NAME"
@@ -29,7 +29,7 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name"
+            android:label="@string/Twitter"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
